<resources>
    <string name="app_name">citeslist</string>
    <string name="cairo">Cairo</string>
    <string name="Giza">El_Giza</string>
    <string name="alexandria">Alexandria</string>
    <string name="luxor">luxor</string>
    <string name="aswan">Aswan</string>
    <string name="dahab">Dahab</string>
    <string name="gona">fayoum</string>
    <string name="Hurghada">El_Gharda</string>
    <string name="sharm">Sharm El_shaikh</string>
    <string name="marsaalam">Marsa Alam</string>
    <string name="matrouh">Marsa matrouh</string>
    <string name="swia">Siwa osais</string>
    <string name="fayoum">Fayoum</string>
    <string name="alamein">Alalmein</string>
    <string name="pyrmid">Pyrmids</string>
    <string name="book">book</string>
    <string name="alazher">Alazher park</string>
    <string name="thezoo">the zoo</string>
    <string name="sphinx">great sphinx</string>
    <string name="places">top places</string>
    <string name="citadel">citadel</string>
    <string name="egyptmusuem">egyption musuem</string>
    <string name="cairotower">cairo tower</string>
    <string name="asha">ashaFahmi palace</string>
    <string name="elmoez">elmoez street</string>
    <string name="nationeg">national musuem</string>
    <string name="abdeinpalace">abadein palace</string>
    <string name="khanelkhalili">khan elkhalili</string>
    <string name="elbaron">elbaron palace</string>
    <string name="citbey">citbey citadel</string>
    <string name="abuqir">Abu Qir</string>
    <string name="boltcastle">bolt Castle</string>
    <string name="lostcity">the Lost City</string>
    <string name="komeldikka">kom El_Dikka</string>
    <string name="raseltin">Ras El_tin Palace</string>
    <string name="alexlibrary">Alex Library</string>
    <string name="stanley">stanelt Bridge</string>
    <string name="abasmosque">Abas Mosque</string>
    <string name="montazh">EL_Montazh</string>
    <string name="alshabamosque">Alshaba Mosque</string>
    <string name="coloredcanyonsinai">colored canyon sinai</string>
    <string name="peaceicon">Peace Icon</string>
    <string name="sohosunset">soho sunset</string>
    <string name="mountcat">Mount catrein</string>
    <string name="dolphinpark">Dolphin Park</string>
    <string name="rasmohamed">"RasMohamed "</string>
    <string name="safri">Safri</string>
    <string name="sghazalagarden">GhazalaGarden</string>
    <string name="petrasightseeing">Petra Sightseeing</string>
    <string name="abosimple">Abo simple temple</string>
    <string name="alkarnk">Karanak Temple</string>
    <string name="kalabsha">Temple of kalabsha</string>
    <string name="komobo">Temple of komobo</string>
    <string name="ramses">Temple of Ramses</string>
    <string name="sohailisland">Sohail Island</string>
    <string name="valentin">Valentin Island</string>
    <string name="ajelicaisland">Ajelica Island</string>
    <string name="highdam">Highdam Bridge</string>
    <string name="abydoscity">Abydoscity</string>
    <string name="deirelmedina">Deir El_Medina</string>
    <string name="luxormusuem">Luxor Musuem</string>
    <string name="motuarytemple">MotuaryTemple</string>
    <string name="nadaland">Ndaland Park</string>
    <string name="bananaisland">Banana Island</string>
    <string name="vallyofking">Vallyofking</string>
    <string name="vallyofqueen">vallyofqueen</string>
    <string name="ramsuemtemple">RamsuemTemple</string>
    <string name="intergarden">InterGarden</string>
    <string name="luxorcorish">Luxor cournish</string>
    <string name="luxortemple">Luxor Temple</string>
    <string name="sahlhasheesh">Sahlhasheesh</string>
    <string name="magwishisland">MagwishIsland</string>
    <string name="jethonisland">jethonisland</string>
    <string name="sandmusuem">SandMusuem</string>
    <string name="aquirm">aquirm</string>
    <string name="grazyland">Grazyland</string>
    <string name="aldaybeach">Al_Daybeach</string>
    <string name="sandbadvillage">sandbadvillage</string>
    <string name="thrushtree">Thrush Tree</string>
    <string name="meteorlake">Meteor lake</string>
    <string name="abughosounwreck">Abughosoun Wreck</string>
    <string name="portghali">Port Ghali</string>
    <string name="berenicevillage">Berenice Village</string>
    <string name="alsamadayreserve">Alsamaday Reserve</string>
    <string name="wadielgemalreserve">WadielgemalReserve</string>
    <string name="dolphinhouse">Dolphin House</string>
    <string name="leadmountaun">Lead Mountain</string>
    <string name="saltlake">Salt Lake</string>
    <string name="theshali">TheShali</string>
    <string name="templeoftheoracl">TempleoftheOracl</string>
    <string name="sandsea">Great Sand Sea</string>
    <string name="fatnasisland">Fatnas Island</string>
    <string name="ghazala">Ghazala</string>
    <string name="mountain">deadMountain</string>
    <string name="housemusuem">HouseMusuem</string>
    <string name="djaracave">Djara Cave</string>
    <string name="aielgarden">Aiel Garden</string>
    <string name="nabaqreserve">Nabq Reserve</string>
    <string name="wadignai">WadiGnai</string>
    <string name="coloredcanyons">coloredcanyons</string>
    <string name="bluehole">BlueHole</string>
    <string name="lighthouse">LightHouse</string>
    <string name="canyon">canyon</string>
    <string name="lagonisland">LagonIsland</string>
    <string name="cleopatrabeach">cleopatrabeach</string>
    <string name="agiba">Agiba Beach</string>
    <string name="saltcave">SaltCve</string>
    <string name="rommel">RommelBeach</string>
    <string name="rommelcave">RommelCave</string>
    <string name="algharam">Algharam</string>
    <string name="ramses2">TempleOfRamses</string>
    <string name="generalreserve">Generalreserve</string>
    <string name="wadielrayen">WadielRayen</string>
    <string name="jabelmedwar">Jabel medwar</string>
    <string name="hawrapyrmid">Hawra Pyrmid</string>
    <string name="pyrmidofseila">pyrmidofseila</string>
    <string name="pyrmidofsenusret">pyrmidofsenusret</string>
    <string name="pyrmidofamemhat3">pyrmidofamemhatIII</string>
    <string name="cities">cities</string>
    <string name="trips">trips</string>
    <string name="offers">offers</string>
    <string name="reserve">reserve</string>
    <string name="location">location</string>
    <string name="aboutapp">aboutapp</string>
    <string name="about">about</string>
    <string name="username">username</string>
    <string name="Next">Next</string>
    <string name="Tickit">Tickt</string>
    <string name="Ticket">Tiket</string>
    <string name="Name">Name</string>
    <string name="Time">Time</string>
    <string name="Date">Date</string>
    <string name="To">To</string>
    <string name="From">From</string>
    <string name="Busnumber">Busnumber</string>
    <string name="print">please dont forget to print or screen this ticket because you cant enter without it</string>
    <string name="time">time</string>
    <string name="price">price</string>
    <string name="Add">Add</string>
    <string name="info">this application help you to get information about touristic places in egypt and book your trip</string>
    <string name="b1">This icon show cities and their touristic places in egypt</string>
    <string name="b">this icon show table of available trips of each city  </string>
    <string name="admins">admins</string>
    <string name="password">password</string>
    <string name="busnumber">busnumber</string>
    <string name="AddTrip">AddTrip</string>
    <string name="ShowTrips">ShoeTrips</string>
    <string name="UpDateTrip">UpDateTrip</string>
    <string name="contact">contact</string>
    <string name="DeletTrip">DeletTrip</string>
    <string name="DeleteTrip">DeleteTrip</string>
    <string name="OK">OK</string>
    <string name="wadihitan">WadiHitan</string>
    <string name="qarunqpalace">Qarunqpalace</string>
    <string name="comoshin">comoshin</string>
    <string name="kranis">kranis</string>
    <string name="tunisvillage">Tunis Village</string>
    <string name="artcenter">Art Center</string>
    <string name="citadel_des">The Citadel of Cairo or Citadel of Saladin
        (Arabic: قلعة صلاح الدين, romanized: Qalaʿat Salāḥ ad-Dīn)
        is a medieval Islamic-era fortification in Cairo, Egypt, built by Salah ad-Din (Saladin)
        and further developed by subsequent Egyptian rulers. It was the seat of government in Egypt
        and the residence of its rulers for nearly 700 years from the 13th to the 19th centuries.
        Its location on a promontory of the Mokattam hills near the center of Cairo commands a strategic
        position overlooking the city and dominating its skyline.
        At the time of its construction, it was among
        the most impressive and ambitious military fortification
        projects of its time.[1] It is now a preserved historic site, including mosques and museums.</string>
    <string name="egyptiannusuemdesc">The Egyptian Museum of Antiquities contains many important pieces of ancient Egyptian history. It houses the world\'s largest collection of Pharaonic antiquities. The Egyptian government established the museum built in 1835 near the Ezbekieh Garden and later moved to the Cairo Citadel. In 1855, Archduke Maximilian of Austria was given all of the artifacts by the Egyptian government; these are now in the Kunsthistorisches Museum, Vienna.

A new museum was established at Boulaq in 1858 in a former warehouse, following the foundation of the new Antiquities Department under the direction of Auguste Mariette. The building lay on the bank of the Nile River, and in 1878 it suffered significant damage owing to the flooding of the Nile River. In 1891, the collections were moved to a former royal palace, in the Giza district of Cairo.[1] They remained there until 1902 when they were moved again to the current museum in Tahrir Square, built by the Italian company of Giuseppe Garozzo and Francesco Zaffrani to a design by the French architect Marcel Dourgnon.[2]

In 2004, the museum appointed Wafaa El Saddik as the first female director general</string>
    <string name="cairotowerdesc">From its 187 meters, the Cairo tower offers the most amazing panoramic views of the Egyptian capital. It is advised to go up to the tower circular observation deck in the late morning or late afternoon for the clearest views of the city.

        You will also find a restaurant at the top of the tower.
        Occasionally, the restaurant revolves around the tower is main axis
        The tower was designed by the Egyptian architect, Naoum Chebib.
        Its completion took 5 years, from 1956 to 1961.
        Opening Hours: From 8 am to midnight. 
    </string>
    <string name="ashafamidesc">Designed by Italian architect Antonio Lasciac in a beautiful
        , classic European style, the palace was built in 1907 by the Nile River in Zamalek
        on an area of 2,700 square meters. he two-storey building contains five rooms with various
        original textile art and European oil paintings. A room originally used for playing billiards 
        and a billiards scoring board was turned into a living room, where the name of Fahmy  father has been 
        engraved in the wood. The furniture in the living room doesn’t belong to Fahmy, as the government and curators carefully
        chose the furniture to match the decorations in the room.</string>
</resources>