<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="340dp"
        android:src="@drawable/trip" />

    <Button
        android:id="@+id/addo"
        android:layout_width="132dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/AddTrip"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/showo"
        android:layout_width="136dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ShowTrips"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/updateo"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/UpDateTrip"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/deleteo"
        android:layout_width="132dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/DeletTrip"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />




</LinearLayout>