<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/im4"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ticket"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/te1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />



    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/te2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />



    </LinearLayout>




    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/te3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />



    </LinearLayout>










    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/To"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/te5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/te4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Busnumber"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/te6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No of persons"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/te7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"

           android:layout_marginTop="10dp"
            android:src="@drawable/p17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"

            android:text="@string/print"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:textStyle="bold"
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="20dp"
        android:text="OK"
        android:textColor="@color/black" />

</LinearLayout>