<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"

    tools:context=".MainActivity17">

    <ListView
        android:layout_weight="1"
        android:id="@+id/offers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <EditText

            android:id="@+id/et1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/i3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/et2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/i5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/To"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/et3"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/i7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/et4"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/i9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busnumber"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et6"

            android:layout_width="138dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_marginLeft="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Not"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et7"
                android:layout_width="138dp"
                android:layout_height="match_parent"

                android:layout_marginLeft="0dp"
                android:layout_weight="1" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button

            android:textSize="15dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:id="@+id/add2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add"/>

        <Button

            android:layout_marginLeft="30dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:id="@+id/delete2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="show"/>





    </LinearLayout>
</LinearLayout>