<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="439dp"
        android:layout_height="267dp"
        android:layout_gravity="top"


        android:src="@drawable/pic2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:padding="20dp">


            <ImageView
                android:id="@+id/f1"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/p2" />

            <ImageView
                android:id="@+id/f2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/p6" />


            <ImageView

                android:id="@+id/f3"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/im4" />


        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:id="@+id/cities"
            style="@style/custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="50dp"

            android:text="@string/cities" />

        <TextView
            android:paddingLeft="30dp"
            android:id="@+id/trips"
            style="@style/custom"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="190dp"

            android:text="@string/trips" />

        <TextView

            android:id="@+id/offers"
            style="@style/custom"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="Yourtickts" />


    </LinearLayout>

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">
            >

            <ImageView
                android:id="@+id/f4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/contact"
                />


            <ImageView
                android:id="@+id/f5"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/admin"
                />


            <ImageView
                android:id="@+id/f6"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/p3" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reserve"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/contact" />

            <TextView
                android:id="@+id/location"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/admins" />

            <TextView

                android:id="@+id/about"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/about" />


        </LinearLayout>

    </LinearLayout>
